<resources>
    <string name="app_name">Infinity</string>
    <string name="title_movie">Title Movie</string>
    <string name="released_on">"Released on : "</string>
    <string name="duration">"Duration : "</string>
    <string name="unavailable">Movie data missing</string>
    <string name="trending">Trending</string>
    <string name="latest">Latest</string>
    <string name="trailer">Trailer</string>
    <string name="cast">Cast</string>
    <string name="toprated_movies">Top rated movies</string>
    <string name="rating">"Rating : "</string>
    <string name="settings">Settings</string>
    <string name="movies">Movies</string>
    <string name="clear_cach">Clear cach</string>
    <string name="confirmation">Confirm</string>
    <string name="do_clear_cach">Do you want to clear the cach ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ache_cleared">Cache cleared !</string>
    <string name="github">Github</string>
    <string name="github_link">https://github.com/ryadamir/MoviesApp</string>
    <string name="developer_page">Developer</string>
    <string name="play_on_cloudstream">Play on CloudStream</string>
    <string name="trending_movies">Trending movies</string>
    <string name="trending_series">Trending series</string>
    <string name="search">Search</string>
    <string name="series">Series</string>
    <string name="netflix">Netflix</string>
    <string name="hbo">HBO</string>
    <string name="apple">Apple TV+</string>
    <string name="saisons">"Seasons : "</string>
    <string name="episodes">"Episodes : "</string>
    <string name="status">"Status : "</string>
    <string name="votes">votes</string>
    <string name="episode_duration">"Episode duration : "</string>
    <string name="seasons">Seasons</string>
    <string name="saison">Season</string>
    <string name="episode">Episode</string>
    <string name="episodes2">Episodes</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="prime">Prime</string>
    <string name="paramount">Paramount+</string>
    <string name="mins">mins</string>
</resources>