<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_movie"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:focusedByDefault="true"
            android:inputType="text"
            android:maxLines="1"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search" />

    </FrameLayout>


    <TextView
        android:id="@+id/movies_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/open_sans_titles"
        android:text="@string/movies"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/list_search" />

    <TextView
        android:id="@+id/series_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/open_sans_titles"
        android:text="@string/series"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_serie_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/list_search" />

    <ProgressBar
        android:id="@+id/pb_movie"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


</LinearLayout>