<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="movie_image"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:contentDescription="back"
            android:padding="10dp"
            android:src="@drawable/ic_round_backspace"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:contentDescription="share"
            android:padding="10dp"
            android:src="@drawable/ic_outline_share_24"
            tools:ignore="HardcodedText" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient_black" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_fav"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/favorite_list"
                    android:gravity="center"
                    app:useMaterialThemeColors="false" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateTint="@color/color_primarydark"
                android:indeterminateTintMode="src_atop" />

            <LinearLayout
                android:id="@+id/infos_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/txt_genre_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/open_sans"
                    android:justificationMode="inter_word"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText"
                    tools:targetApi="o" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_rating_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:progressTint="@color/color_rating"
                        android:rating="2" />

                    <TextView
                        android:id="@+id/txt_rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:textSize="12sp"
                        android:textColor="@color/grey_font"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_release_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/released_on"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/status"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_duration_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/duration"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_episodes_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/episodes"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_saisons_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/saisons"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_cloudstream"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:visibility="invisible"
                android:backgroundTint="@color/bottomBar"
                android:text="@string/play_on_cloudstream"></Button>


            <TextView
                android:id="@+id/cast_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_titles"
                android:text="@string/cast"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_primary"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:visibility="invisible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_cast" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/open_sans_titles"
                android:text="@string/trailer"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:autoPlay="false"
                app:showFullScreenButton="false" />

            <TextView
                android:id="@+id/seasons_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_titles"
                android:text="@string/seasons"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_primary"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_seasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:visibility="invisible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_cast" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/related_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/open_sans_titles"
                android:text="@string/cast"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_primary"
                android:elevation="8dp"
                app:cardElevation="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_related"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_cast" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>