<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/color_primary"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollIndicators="none"
                    android:scrollbars="none"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    app:iss_period="3000"
                    tools:targetApi="m" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_gradient_black"
                    android:elevation="4dp" />

                <TextView
                    android:id="@+id/txt_title_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:elevation="6dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:gravity="center"
                    android:padding="40dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/title_movie" />

            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateTint="@color/color_primarydark"
                android:indeterminateTintMode="src_atop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trending_movies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/trending_movies"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trending_series_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/trending_series"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/netflix_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/netflix"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_netflix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hbo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/hbo"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hbo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/apple_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/apple"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_apple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toprated_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/open_sans_titles"
                    android:text="@string/toprated_movies"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_toprated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="RtlSymmetry"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_movie">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>